[gd_scene load_steps=2 format=3 uid="uid://b68hvmv1ma7mk"]

[ext_resource type="Script" path="res://PortMenu.gd" id="1_uftqj"]

[node name="PortMenu" type="Panel"]
visible = false
offset_right = 200.0
offset_bottom = 200.0
script = ExtResource("1_uftqj")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_right = 96.0
offset_bottom = 192.0
grow_horizontal = 2
text = "Port Shop"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 196.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Damage"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Speed"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fire Rate"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DamageButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "+"

[node name="SpeedButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "+"

[node name="FireRateButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "+"

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/FireRateButton" to="." method="_on_fire_rate_button_pressed"]
